--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
-POSTGRES_USER=user
+POSTGRES_USER=username
 POSTGRES_PASSWORD=password
-POSTGRES_DATABASE=name
+POSTGRES_DATABASE=dbname
 PORT=3000
 MODE=DEV
 RUN_MIGRATIONS=true
